# GAFIME

./: .dockerignore  .gitignore  BUILD.md  CONTINUATION_PLAN.txt  CONTRIBUTING.md  Dockerfile  Dockerfile.smoketest  GAFIME_AI_CODEWRITER_GUIDE.md  GAFIME_PROJECT_REPORT.md  GAFIME_Starter_Guide.ipynb  GAFIME_TimeSeries_Limitation_Report.txt  MANIFEST.in  PERFORMANCE_REPORT.md  PERFORMANCE_REPORT_V2.md  PERFORMANCE_REPORT_V3.md  PERFORMANCE_REPORT_V4.md  PROJECT_DESCRIPTION.txt  PROJECT_REVIEW.md  PROJECT_STRUCTURE.md  README.MD  README.md  SPEED_REPORT.md  USAGE.md  async_results.txt  batched_results.txt  benchmark_results.txt  benchmark_results_v2.txt  benchmark_v4_results.txt  build_cuda.bat  catboost_optuna_tuning.py  check_regs.bat  cibw-wheels-macos-14-2  demo_extreme.py  docker-compose.yml  extreme_result.txt  full_system_results.txt  gafime_tutorial.ipynb  log.txt  log_utf8.txt  pivot_results.txt  (+13 more)
.claude/skills/benchmark-vs-manual/: SKILL.md
.claude/skills/benchmark-vs-manual/scripts/: compare_approaches.py
.claude/skills/build-pipeline/: SKILL.md
.claude/skills/build-pipeline/scripts/: generate_pipeline.py
.claude/skills/check-install/: SKILL.md
.claude/skills/check-install/scripts/: health_check.py
.claude/skills/dataset-profiler/: SKILL.md
.claude/skills/dataset-profiler/scripts/: profile_dataset.py
.claude/skills/interpret-results/: SKILL.md
.claude/skills/interpret-results/scripts/: explain_report.py
.claude/skills/platform-detect/: SKILL.md
.claude/skills/platform-detect/scripts/: platform_detect.py
.claude/skills/time-series-setup/: SKILL.md
.claude/skills/time-series-setup/scripts/: detect_time_structure.py
.claude/skills/troubleshoot-backend/: SKILL.md
.claude/skills/troubleshoot-backend/scripts/: diagnose_backends.py
.claude/skills/validate-features/: SKILL.md
.claude/skills/validate-features/scripts/: validate_features.py
.github/workflows/: build_wheels.yml
cibw-wheels-windows-latest-1_extracted/: gafime-0.2.0-cp310-cp310-win_amd64.whl  gafime-0.2.0-cp311-cp311-win_amd64.whl  gafime-0.2.0-cp312-cp312-win_amd64.whl  gafime-0.2.0-cp313-cp313-win_amd64.whl
docs/: assumptions.md  design.md  nvidia-architecture-reference.md  safety.md
examples/: feature_engineering_demo.py
gafime/: __init__.py  __main__.py  _dummy.c  backend.py  cli.py  config.py  engine.py  io.py  sklearn.py  tutorial.py
gafime/backend/: __init__.py  cpu_numpy.py  gpu_cupy.py  memory_guard.py  metrics.py
gafime/backends/: __init__.py  base.py  core_backend.py  cupy_backend.py  fused_kernel.py  native_cuda_backend.py  native_metal_backend.py  torch_backend.py
gafime/fe/: __init__.py  base.py  simple.py
gafime/metrics/: __init__.py  base.py  cpu_metrics.py
gafime/optimizer/: __init__.py  adaptive.py  ensemble_search.py  optimizer.py  orchestrator.py
gafime/planning/: __init__.py  combinations.py
gafime/preprocessors/: __init__.py  time_series.py
gafime/report/: __init__.py  export.py  schema.py
gafime/reporting/: __init__.py  report.py
gafime/utils/: __init__.py  arrays.py  safety.py
gafime/validation/: __init__.py  permutation.py  stability.py
gafime_core/: CMakeLists.txt
gafime_core/src/: gafime_core.cpp
src/common/: interfaces.h
src/cpu/: cpu_backend.cpp
src/cpu/gafime_cpu/: Cargo.toml  build.rs  build_log.txt
src/cpu/gafime_cpu/src/: async_pipeline.rs  batch_launcher.rs  cache_scheduler.rs  contiguous_layout.rs  data_quality.rs  lib.rs  ots_encoder.rs  smart_scheduler.rs
src/cuda/: kernels.cu
src/metal/: gafime_kernels.metal  metal_backend.h  metal_backend.mm
tests/: benchmark.py  benchmark_full_system.py  benchmark_prealloc.py  benchmark_results.json  benchmark_smart_scheduler.py  benchmark_v3.py  benchmark_v4.py  docker_backend_verification.py  result.txt  scientific_benchmark.py  test_core_backend.py  test_cupy_backend.py  test_distribution.py  test_engine.py  test_engine_smoke.py  test_memory_guard.py  test_output.txt  test_perpair_interactions.py  test_sklearn.py
tests/smoke_tests/: verify_kernel.py
