[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gafime"
version = "0.2.0"
description = "GPU Accelerated Feature Interaction Mining Engine"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "Hamza", email = "hamzausta2222@gmail.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "numpy>=1.24",
    "polars>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[project.urls]
Homepage = "https://github.com/onlyxItachi/GAFIME"
Repository = "https://github.com/onlyxItachi/GAFIME"
Issues = "https://github.com/onlyxItachi/GAFIME/issues"

[tool.setuptools.packages.find]
exclude = ["tests", "tests.*"]

[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-*"
skip = "pp* *-musllinux_*"
build-frontend = "build"
test-requires = "pytest"
test-command = "pytest {project}/tests"
