[package]
name = "gafime_cpu"
version = "0.3.0"
edition = "2021"
authors = ["GAFIME Team"]
description = "GAFIME CPU Backend: GPU-aware batch launcher and CatBoost OTS encoder"

[lib]
name = "gafime_cpu"
crate-type = ["cdylib"]  # For Python extension module

[dependencies]
# Python bindings
pyo3 = { version = "0.22", features = ["extension-module"] }

# Parallel computation
rayon = "1.10"

# Random number generation
rand = "0.8"
rand_xoshiro = "0.6"  # Fast seeded RNG

# Fast HashMap
rustc-hash = "1.1"

# For FFI to CUDA DLL
libloading = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
